update index.html in second branch
update index.html in second branch

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Learn GitHub Desktop</h1>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nesciunt fugit commodi consequatur maiores porro quisquam cumque, saepe aut blanditiis nostrum nulla delectus, atque optio ratione, facere iusto odit aperiam?</h2>
 </body>
 </html>
